--- a/index.html
+++ b/index.html
@@ -63,9 +63,16 @@
      style="width:200px; height:250px; object-fit: cover;" 
      src="HarryGuo.jpg" alt=""> -->
 
-<div style="display: flex; align-items: center;">
+<!--  <div style="display: flex; align-items: center;">
   <img src="HarryGuo.jpg" alt="Harry Guo" style="width:230px; height:230px; object-fit: cover; margin-right: 20px;">
-  <div>
+  <div> -->
+
+<div style="display: flex; align-items: center;">
+  <img src="HarryGuo.jpg" alt="Harry Guo" 
+       style="width: 230px; height: 230px; object-fit: cover; margin-right: 20px; 
+              border: 2px solid #000; border-radius: 10px;">
+</div>
+    
     <h3>Hongyu (Harry) Guo</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p>Senior Researcher Officer at the 
