--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h3>Hongyu (Harry) Guo</h3>
     <p>Email: hongyu.guo@uottawa.ca</p>
     <p>Senior Researcher Officer at the 
-      <a href="https://nrc.canada.ca/en">Digital Technologies Research Center of the National Research Council Canada (NRC)</a>.
+      <a href="https://nrc.canada.ca/en"> National Research Council Canada (NRC)</a>.
     </p>
     <p>Adjunct Professor in the 
       <a href="https://www.uottawa.ca/faculty-engineering/school-electrical-engineering-computer-science">School of Electrical Engineering and Computer Science</a> 
