--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Lu, J., Chen, X., Lu, S., Shi, C., Guo, H., Bengio, Y., Tang, J. </p><a href="https://openreview.net/pdf?id=OzUNDnpQyd">ICLR 2025</a></li>         
 <li style="margin-bottom: 20px;"><b> <span style="color: Fuchsia;">[AI for Materials]</span> AssembleFlow: Rigid Flow Matching with Inertial Frames for Molecular Assembly. </b><p class='content'> Guo, H., Bengio, Y., Liu, S. </p><a href="https://openreview.net/pdf?id=jckKNzYYA6">ICLR 2025</a></li>  
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,
-Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://arxiv.org/pdf/2302.04611"> Nature Machine Intelligence 2025</a></li>
+Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://www.nature.com/articles/s42256-025-01011-z"> Nature Machine Intelligence 2025</a></li>
            
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span> Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
   </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">  ICLR 2024  </a> 
