--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 
            
-<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Shengchao Liu, Divin Yan, Weitao Du, Weiyang Liu, Zhuoxinran Li, Hongyu Guo, Christian Borgs, Jennifer Chayes, Anima Anandkumar. </p><a href="https://arxiv.org/pdf/2409.10584">Proceedings of the National Academy of Sciences (PNAS) 2025</a></li> 
+<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Liu, S., Yan, D., Du, W., Liu, W., Li, Z., Guo, H., Borgs C., Chayes, J., Anandkumar, A. </p><a href="https://arxiv.org/pdf/2409.10584">Proceedings of the National Academy of Sciences (PNAS) 2025</a></li> 
 <li style="margin-bottom: 20px;"><b> <span style="color: Fuchsia;">[AI for Materials]</span> AssembleFlow: Rigid Flow Matching with Inertial Frames for Molecular Assembly. </b><p class='content'> Guo, H., Bengio, Y., Liu, S. </p><a href="https://openreview.net/pdf?id=jckKNzYYA6">ICLR 2025</a></li>  
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Lu, J., Chen, X., Lu, S., Shi, C., Guo, H., Bengio, Y., Tang, J. </p><a href="https://openreview.net/pdf?id=OzUNDnpQyd">ICLR 2025</a></li>         
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,
