--- a/index.html
+++ b/index.html
@@ -172,12 +172,10 @@
 
 
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> A Multi-Grained Symmetric Differential Equation Model for Learning Protein-Ligand Binding Dynamics. </b><p class='content'> Liu. S., Du, W., Xu, H., Li, Y., Li, Z., Bhethanabotla, V., Yan, D., Borgs, C., Anandkumar, A., Guo, H., Chayes, J. </p><a href="https://arxiv.org/pdf/2401.15122"> Nature Communications 2025</a></li>            
-<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J.,           
+<li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span>A Text-guided Protein Design Framework. </b><p class='content'> Liu, S., Li, Y., Li, Z., Gitter, A., Zhu, Y., Lu, J., Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://www.nature.com/articles/s42256-025-01011-z"> Nature Machine Intelligence 2025</a></li>          
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs] </span> Manifold-Constrained Nucleus-Level Denoising Diffusion Model for Structure-Based Drug Design. </b><p class='content'> Liu, S., Yan, D., Du, W., Liu, W., Li, Z., Guo, H., Borgs C., Chayes, J., Anandkumar, A. </p><a href="https://arxiv.org/pdf/2409.10584">Proceedings of the National Academy of Sciences (PNAS) 2025</a></li> 
 <li style="margin-bottom: 20px;"><b> <span style="color: Fuchsia;">[AI for Materials]</span> AssembleFlow: Rigid Flow Matching with Inertial Frames for Molecular Assembly. </b><p class='content'> Guo, H., Bengio, Y., Liu, S. </p><a href="https://openreview.net/pdf?id=jckKNzYYA6">ICLR 2025</a></li>  
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;">[AI for Drugs]</span> Structure Language Models for Protein Conformation Generation. </b><p class='content'> Lu, J., Chen, X., Lu, S., Shi, C., Guo, H., Bengio, Y., Tang, J. </p><a href="https://openreview.net/pdf?id=OzUNDnpQyd">ICLR 2025</a></li>         
-Xu, Z., Nie, W., Ramanathan, A., Xiao, C., Tang, J., Guo, H., & Anandkumar, A. </p><a href="https://www.nature.com/articles/s42256-025-01011-z"> Nature Machine Intelligence 2025</a></li>
-
            
 <li style="margin-bottom: 20px;"><b> <span style="color: Darkorange;"> [AI for Drugs] </span> Conversational Drug Editing Using Retrieval and Domain Feedback.  </b> <p class='content'> Liu, S., Wang, J., Yang, J., Wang, C., Liu, L., Guo, H., & Xiao, C.
   </p> <a href="https://arxiv.org/pdf/2305.18090.pdf">  ICLR 2024  </a> 
