--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class=" my-4 text-left">
       <h4>Service and Awards</h4>
       <ul>
-<li> [Recent reviewer roles] Nature Machine Intelligence, NSERC Discovery Grant</li>  
+<li> [Recent reviewer roles] Nature Machine Intelligence 2025, NSERC Discovery Grant 2025</li>  
 <li> [Recent program committee members] ICLR19-22, NeurIPS16-21, ICML18-21, ACL21,19,17, EMNLP20,15-18, NAACL18,16,15 </li>
 
 <li> [Research awards] <br>
