--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
     
     <p class="m-0">
       <a href="https://scholar.google.com/citations?user=bZUqlakAAAAJ&hl=en">[Google Scholar]</a>, 
-      <a href="https://uniweb.uottawa.ca/view/profile/members/4499">[uOttawa Webpage]</a> 
+      <a href="https://uniweb.uottawa.ca/view/profile/members/4499">[uOttawa Webpage]</a>,
+      <a href="https://www.linkedin.com/in/harry-h-y-guo-a582087/">[LinkedIn Profile]</a> 
    <!--     <a href="https://www.linkedin.com/in/harry-h-y-guo-a582087">[LinkedIn]</a>, -->
    <!--     <a href="https://twitter.com/Harry_HongyuGuo">[Twitter]</a>      -->
     </p>
